enum-ptr-tests/tests/fail/size_unmatch.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> tests/fail/size_unmatch.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^
  |
  = note: source type: `[usize; 2]` (128 bits)
  = note: target type: `Foo` (192 bits)
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> tests/fail/size_unmatch.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `str`
  = help: the following other types implement trait `Aligned`:
            &'a T
            &'a mut T
            Box<T>
            Option<&'a T>
            Option<&'a mut T>
            Option<Box<T>>
  = note: required because of the requirements on the impl of `Aligned` for `&'b str`
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
